# Piccode

./: .gitignore  Makefile.am  README.md  all.sh  configure  configure.ac  install.sh  jlink-rt.sh  picoc  pom.xml  verify.sh
.github/workflows/: maven.yml
editors/: language_piccodescript.lua
editors/Lite/: install.sh  language_piccodescript.lua
editors/NotePad++/: PiccodeScript.xml
editors/emacs/: install.sh  piccodescript-mode.el
editors/mousepad/: install.sh  piccodescript.lang
editors/nvim/: README.md  install.sh  pics.lua
editors/vscode/: CHANGELOG.md  LICENSE  README.md  install.sh  language-configuration.json  package-lock.json  package.json  piccodescript-syntax-highlighting-0.0.1.vsix  vsc-extension-quickstart.md
examples/: array2.pics  arrayfilter.pics  arrays.pics  arrayzip.pics  church.pics  closures.pics  docs.pics  errors.pics  factorial.pics  fib.pics  files.pics  fizzbuzz.pics  gcd.pics  hello.pics  iter.pics  list2.pics  listfilter.pics  lists.pics  modules.pics  modules2.pics  ref.pics  rt-checks.pics  showcase.pics  virtual.pics  virtual2.pics  virtual3.pics  virtual4.pics  when.pics
pkg/applicative/: app.pics
pkg/args/: args.pics
pkg/array/: array.pics
pkg/io/: io.pics
pkg/iters/: iters.pics
pkg/math/: math.pics
pkg/number/: number.pics
pkg/option/: option.pics
pkg/result/: result.pics
pkg/string/: string.pics
pkg/sys/: sys.pics
pkg/tuple/: tuple.pics
pkg/unit/: unit.pics
std/applicative/: app.pics
std/args/: args.pics
std/array/: array.pics
std/errors/: error.pics
std/fs/: file.pics  fs.pics
(+162 files in other folders)
